test/spec_vectors/global/fail/module_2.wat
(module (import "spectest" "global_i32" (global i32)) (func (global.set 0 (i32.const 1))))